Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -242,10 +242,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fb88d53e978>"
+       "<folium.map.Marker at 0x7fb88d5b6fd0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
