--- a/index.ipynb
+++ b/index.ipynb
@@ -437,23 +437,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Marker' object cannot be interpreted as an integer",
+     "ename": "IndexError",
+     "evalue": "pop index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-b45c0d5368fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighborhood_markers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mla_boca_marker\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'Marker' object cannot be interpreted as an integer"
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-431c37745142>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m neighborhood_markers.pop(5\n\u001b[0m\u001b[1;32m      2\u001b[0m                     )\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
      ]
     }
    ],
    "source": [
-    "neighborhood_markers.pop(la_boca_marker)"
+    "neighborhood_markers.pop(5\n",
+    "                    )"
    ]
   },
   {
