--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -447,14 +447,13 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-431c37745142>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m neighborhood_markers.pop(5\n\u001b[0m\u001b[1;32m      2\u001b[0m                     )\n",
+      "\u001b[0;32m<ipython-input-27-124b1d6783c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighborhood_markers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
      ]
     }
    ],
    "source": [
-    "neighborhood_markers.pop(5\n",
-    "                    )"
+    "neighborhood_markers.pop(5)"
    ]
   },
   {
