Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,15 +457,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "True\n"
+      "4\n",
+      "False\n"
      ]
     }
    ],
